--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -26,13 +26,15 @@ modules-left = ewmh
 ; modules-center = 
 modules-right = date
 
+;width = 100%:-300
 width = 100%
-height = 30
-padding = 15
+;offset-x = :150
+;offset-y = :5
+height = 35
+padding = 20
 module-margin = 3
 
 ; width = 100%:-30
-; offset-x = :15
 
 background = ${colors.background}
 foreground = ${colors.foreground}
